// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#app/components/stages/omega/status/rejected \`code\` is an integer renders 1`] = `
<div
  className="omega rejected"
>
  <h2>
    1
    : 
    MOCK NAME
  </h2>
</div>
`;

exports[`#app/components/stages/omega/status/rejected \`message\` is a string renders 1`] = `
<div
  className="omega rejected"
>
  <h2>
    MOCK NAME
  </h2>
  <p>
    MOCK MESSAGE
  </p>
</div>
`;

exports[`#app/components/stages/omega/status/rejected Always renders 1`] = `
<div
  className="omega rejected"
>
  <h2>
    MOCK NAME
  </h2>
</div>
`;
